# doublink-tester

./: .env.example  .gitignore  pyproject.toml
config/: settings.yaml
config/profiles/: multilink_modes.yaml  network_conditions.yaml  traffic_profiles.yaml
config/test_matrices/: app_layer.yaml  degradation.yaml  golden_scenarios.yaml  link_weight.yaml  mode_switching.yaml
deploy/: Dockerfile  docker-compose.yml  install.sh
deploy/prometheus/: prometheus.yml
docs/: TEST_MANUAL.md  TEST_PLAN.md  TEST_PLAN_new.md
scripts/: daily_test_run.sh  extract_allure_data.py  generate_report.sh  generate_test_report.py  parse_results.py  run_all_profiles.sh  run_api.sh  run_tests.sh  run_udp_server_output.sh  run_ui.py  start_ui.sh
src/doublink_tester/: __init__.py  config.py  models.py
src/doublink_tester/api/: __init__.py  app.py  dependencies.py  schemas.py
src/doublink_tester/clients/: __init__.py  harmony_client.py  multilink_client.py  netemu_client.py
src/doublink_tester/metrics/: __init__.py  annotator.py  collector.py  sampler.py
src/doublink_tester/orchestrator/: __init__.py  result.py  runner.py  scenario.py
src/doublink_tester/traffic/: __init__.py  base.py  factory.py  fortio.py  iperf3.py  sipp.py
tests/: conftest.py
tests/fixtures/: multilink.py  network.py  traffic.py
tests/test_degradation/: test_failover.py  test_throughput_degradation.py
tests/test_golden_scenarios/: test_golden_scenarios.py
tests/test_link_weight/: test_weight_distribution.py
tests/test_mode_switching/: test_mode_transitions.py
(+5 files in other folders)
